--- a/todo.txt
+++ b/todo.txt
@@ -1,23 +1,18 @@
-CatRom:
+[Repo]
 
-Length
-Improve accuracy of splineAlpha in AlphaToSpline
+* Proper documentation
 
-Spline:
+[CatRom]
 
-Better handling of consecutive equal points
-	Consider now that you have to find at least two unequal points to calculate
-	the zeroth and veryLast points
+* Improve accuracy of splineAlpha in :AlphaToSpline()
 
-Better numerical integration
-Uniform reparameterization
+[Spline]
 
-Future:
+* Faster and more precise numerical integration for :SolveLength()
+* Add uniform reparameterization and accompanying methods
 
-Support modifying a single point
-Support number splines
-Restrict SolveBinormal, SolveCFrame, and SolveRotCFrame to the appropriate types
+[Future]
 
-Way way future:
-
-Support adding and removing points
+* Support modifying points (important for avoiding re-instantiating every frame)
+* Support adding and removing points
+* n-dimensional splines (already possible with vector CatRoms but annoying to do)
